Fix: Add spacing between home page and footer

--- a/src/pages/Home/desktop/HomePageDesktop.css
+++ b/src/pages/Home/desktop/HomePageDesktop.css
@@ -4,7 +4,9 @@
     margin-left: calc(5vh + 5vw);
     margin-right: calc(5vh + 5vw);
 
-    margin-top: 5vh;
+    margin-top: 2.5vh;
+    padding-bottom: 2em;
+    box-sizing: border-box;
 }
 
 .home-page-desktop-left-container{
